--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<title>Differential Equations</title>
 	<link href="./styles.css" rel="stylesheet" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" rel="stylesheet" />
-	<!-- <link href="vendor/Chart.min.css" rel="stylesheet" /> -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
-	<!-- <script src="vendor/Chart.bundle.min.js"></script> -->
+	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" rel="stylesheet" /> -->
+	<link href="vendor/Chart.min.css" rel="stylesheet" />
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script> -->
+	<script src="vendor/Chart.bundle.min.js"></script>
 </head>
 
 <body>
@@ -23,9 +23,7 @@
 	h
 	<input id="h" type="number" min="0.1" max="1" step="0.1" />
 
-	<script src="./models.js"></script>
-	<script src="./controller.js"></script>
-	<script src="./main.js"></script>
+	<script src="./main.js" type="module"></script>
 </body>
 
 </html>
