--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
 
 <body>
 
-	<canvas id="graph" width="400" height="400"></canvas>
+	<section class="main-graph">
+		<canvas id="graph"></canvas>
+	</section>
 
-	x0
-	<input id="x0" type="number" min="0" step="1" />
-	y0
-	<input id="y0" type="number" min="0" step="1" />
-	X
-	<input id="X" type="number" min="0" step="1" />
-	h
-	<input id="h" type="number" min="0.1" max="1" step="0.1" />
+	<section class="error-graphs">
+
+	</section>
+
+	<section class="inputs">
+		x0
+		<input id="x0" type="number" min="0" step="1" />
+		y0
+		<input id="y0" type="number" min="0" step="1" />
+		X
+		<input id="X" type="number" min="0" step="1" />
+		h
+		<input id="h" type="number" min="0.1" max="1" step="0.1" />
+	</section>
 
 	<script src="./main.js" type="module"></script>
 </body>
