--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</section>
 
 	<section class="error-graphs">
-		<canvas id="local-error"></canvas>
+		<canvas id="global-error"></canvas>
 	</section>
 
 	<section class="inputs">
