--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<input id="y0" type="number" min="0" step="1" />
 		X
 		<input id="X" type="number" min="0" step="1" />
-		h
-		<input id="h" type="number" min="0.1" max="1" step="0.1" />
+		N
+		<input id="N" type="number" min="5" max="200" step="5" />
 	</section>
 
 	<script src="./main.js" type="module"></script>
