Fix GlobalError and implement Local

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 	<section class="error-graphs">
 		<canvas id="global-error"></canvas>
+		<canvas id="local-error"></canvas>
 	</section>
 
 	<section class="inputs">
@@ -26,7 +27,7 @@
 		y0
 		<input id="y0" type="number" min="0" step="1" />
 		X
-		<input id="X" type="number" min="0" step="1" />
+		<input id="X" type="number" min="1" step="1" />
 		N
 		<input id="N" type="number" min="5" max="200" step="5" />
 	</section>
