--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Differential Equations</title>
 	<link href="./styles.css" rel="stylesheet" />
+	<link rel="icon" href="favicon.png" type="image/png" sizes="96x96">
 	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" rel="stylesheet" /> -->
 	<link href="vendor/Chart.min.css" rel="stylesheet" />
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script> -->
